[package]
name = "chip8"
version = "0.1.0"
authors = ["Razvan Rotari <razvanrotari@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.52.0"
piston_window = "0.111.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.66.0"
piston2d-opengl_graphics = "0.73.0"
derivative = "2.1.1"
image = "0.23.8"
lazy_static = "1.4.0"
