[package]
name = "chip8"
version = "0.1.0"
authors = ["Razvan Rotari <razvanrotari@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
clipboard = "0.5"
glium = { version = "0.27", default-features = true }
cgmath = "0.17.0"
image = "0.23"
imgui = "0.5.0"
imgui-glium-renderer = "0.5.0"
imgui-winit-support = "0.5.0"
rand = "0.7.3"

